fix: fixed name duplication error; layout: changed letter layout and spacing in posts

--- a/globals/Post/styles/Post.module.css
+++ b/globals/Post/styles/Post.module.css
@@ -66,6 +66,13 @@
     font-family: "Switzer";
     font-weight: bolder;
     font-size: var(--title-size);
+    letter-spacing: -0.02rem;
+}
+
+.post_content_wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem
 }
 
 .post_wrap_text {
